feat(params): Move sources management from main method to Yaml params